--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 	
 	<title>Google Glass</title>
 
-	<link rel="stylesheet" type="text/css" href="_css/estilo.css">
+	<link rel="stylesheet" href="_css/estilo.css">
 
 </head>
-/* jsjashadhjsakd*/
-<header id = "cabecalho">
+
+
 <body>
-<div id = "interface">
+<div id="interface" >
+	<header id = "cabecalho">
+
 	<hgroup>
 	<h1>Google Glass</h1>
 	<h2>A revolução do Google está chegando</h2>
 	</hgroup>
 
 <figure class="foto-oculos">
-<img src="_imagens/glass-oculos-preto-peq.png">
+<img id="icone"  src="_imagens/glass-oculos-preto-peq.png">
 </figure>
 
 <nav id="menu">
@@ -35,20 +37,18 @@
 </nav>
 
 </header>
-
+<p>
 <hgroup>
 <h3>Tecnologia > &nbsp; Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
-<h2>por Gustavo Guanabara<h2>
+<h2>por Gustavo Guanabara</h2>
 <h3>Atualizado em 23/Abril/2013</h3>
 </hgroup>
-
-<p>
-	
+</p>	
 <p>Exemplos de <sub>formatação</sub></p>
 
 <h2>O que é</h2>
-<p>O <span style="text-decoration: underline;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-<wbr>furto e de desbloqueio de tela para o acessório.<p>
+<p>O <span style="text-decoration: underline;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-<wbr>furto e de desbloqueio de tela para o acessório.</p>
 
 <figure class="foto-legenda">
 <img src="_imagens/glass-quadro-homem-mulher.jpg"/>
