--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 </nav>
 
 </header>
+
+<section id="corpo">
 <p>
 <hgroup>
 <h3>Tecnologia > &nbsp; Inovações</h3>
@@ -77,19 +79,27 @@ Memória Interna: 12GB</p>
 
 [AQUI ENTRA UM VÍDEO]
 
+</section>
+<aside id="lateral"> 
+
 <p>Outras Notícias
 Vídeo mais recente</p>
 
 [AQUI ENTRA UM VÍDEO]
 
+
 <h2>Novidades no Glass</h2>
 <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
+</aside>
+<footer id="rodape">
 
-Copyright &copy2013 - by Gustavo Guanabara
-Facebook | Twitter
+<P>Copyright &copy2019 - by Gustavo Guanabara <br/>
+<a href="http://facebook.com/genissonfg" target="_blank">Facebook </a>   | 
+<a href="http://twitter.com/genissonfg" target="blank">Twitter </a>  </P>
 
+</footer>
 
 </div>
 </body>
