--- a/index.html
+++ b/index.html
@@ -63,15 +63,20 @@
 <h2>Data de lançamento</h2>
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-<p>Especificações Técnicas
-Tabela Técnica do Google Glass Mar/2013</p>
+<h1>Especificações Técnicas</h1>
+<table id="tabelaspec">
+<caption> Técnica do Google Glass Mar/2019 </caption>
 
-<p>Tela:Resolução equivalente a tela de 25"
-Camera: 5MP para fotos / 720p para vídeos
-Conectividade: Wi-Fi/ Bluetooth
-Memória Interna: 12GB</p>
+<tr><td>Tela:</td><td>Resolução equivalente a tela de 25"</td></tr>
+<tr><td rowspan="2"> Camera:</td><td> 5MP para fotos </td></tr>
+<tr><td>720p para vídeos</td></tr>
+<tr><td rowspan="2"> Conectividade:</td><td> Wi-Fi </td></tr>
+<tr><td>Bluetooth</td></tr>
+<tr><td>Memória Interna:</td><td> 12GB</td></tr>
 
-<h2>Como funciona</h2>
+</table>
+
+<h1>Como funciona</h1>
 <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
 
 <h2>O que você pode fazer com o Google Glasses</h2>
@@ -82,8 +87,8 @@ Memória Interna: 12GB</p>
 </section>
 <aside id="lateral"> 
 
-<p>Outras Notícias
-Vídeo mais recente</p>
+<p><h1>Outras Notícias</h1></p>
+<p><h2>Vídeo mais recente</p></h2>
 
 [AQUI ENTRA UM VÍDEO]
 
