--- a/testejs03.html
+++ b/testejs03.html
@@ -7,13 +7,20 @@
 
  <script>
 
-    function lampada(acende,apaga,quebra) {
+     var quebrada = false;
 
-      document.getElementById("luz").src ="_imagens/lampada-acesa.jpg";
-      document.getElementById("luz").src = "_imagens/lampada-apagada.jpg";
-      document.getElementById("luz").src = "_imagens/lampada-quebrada.jpg";
+    function lampada(estado) {
+
+        if(!quebrada){
+
+            document.getElementById("luz").src = "_imagens/" + estado + ".jpg";
+
+                if(estado == 'lampada-quebrada') {
+                    quebrada = true;
+                }
+            }
+        
     }
-
     
 
  </script>
@@ -25,7 +32,7 @@
 
 <h1>Acenda a Lâmpada</h1>
 
-<img src="_imagens/lampada-apagada.jpg" id="luz" onmouseover="lampada(acende)" onmouseout="lampada(apaga)" onclick="lampada(quebra)"/>
+<img src="_imagens/lampada-apagada.jpg" id="luz" onmouseover="lampada('lampada-acesa')" onmouseout="lampada('lampada-apagada')" onclick="lampada('lampada-quebrada')"/>
 
 
 </body>
