Aula 25 - Integrando JavaScript e Html5

--- a/multimidia.html
+++ b/multimidia.html
@@ -1,14 +1,43 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+	<meta charset="UTF-8"/>
+	
+	<title>Google Glass</title>
 
-[AQUI ENTRA UMA FOTO]
+	<link rel="stylesheet" href="_css/estilo.css">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+</head>
+
+<script language="javascript" src = "_javascript/funcoes.js"> </script>
+
+<body>
+<div id="interface" >
+	<header id = "cabecalho">
+
+	<hgroup>
+	<h1>Google Glass</h1>
+	<h2>A revolução do Google está chegando</h2>
+	</hgroup>
+
+<figure class="foto-oculos">
+<img id="icone"  src="_imagens/glass-oculos-preto-peq.png">
+</figure>
+
+<nav id="menu">
+<h1>Menu Principal</h1>
+
+<ul type="square">
+	<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html">Home</a></li>
+	<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
+	<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
+	<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+	<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="faleconocos.html">Fale conosco</a></li>
+</ul>
+
+</nav>
+
+</header>
 
 Glass > Multimídia
 Sons e Vídeos
@@ -21,5 +50,14 @@ Atualizado em 01/Maio/2013
 [AQUI ENTRA UM VÍDEO]
 [AQUI ENTRA UM ÁUDIO]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+<footer id="rodape">
+
+    <P>Copyright &copy2019 - by Gustavo Guanabara <br/>
+    <a href="http://facebook.com/genissonfg" target="_blank">Facebook </a>   | 
+    <a href="http://twitter.com/genissonfg" target="blank">Twitter </a>  </P>
+    
+    </footer>
+    
+    </div>
+    </body>
+    </html>
